--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
 }
 
 .row {
-  height: 300px;
+  height: 400px;
   width: 350px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 2rem;
   background-color: bisque;
@@ -58,6 +58,7 @@ button {
   border-bottom-right-radius: 10px;
   height: 100%;
   padding: 10px;
+  width: 70px;
 }
 
 .requisiti {
@@ -67,4 +68,45 @@ button {
 
 .success {
   color: rgb(23, 209, 23);
+}
+
+#passBar {
+  margin-top: 1rem;
+  height: 30px;
+  width: 100%;
+  background-color: rgb(201, 201, 201);
+  position: relative;
+}
+
+.oneOfFour {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 75%;
+  bottom: 0;
+  background-color: rgb(255, 31, 31);
+}
+.twoOfFour {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 50%;
+  bottom: 0;
+  background-color: rgb(247, 143, 51);
+}
+.threeOfFour {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 25%;
+  bottom: 0;
+  background-color: rgb(249, 225, 90);
+}
+.fourOfFour {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: green;
 }
